<resources>
    <string name="app_name">TODO List</string>
    <string name="action_mode">Action Mode</string>
    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="task_name">Task name</string>
    <string name="name_the_task">Name the task</string>
    <string name="task_description">Task description</string>
    <string name="describe_the_task">Describe the task</string>
    <string name="deadline_date_and_time">Date and time of the deadline:</string>
    <string name="change_deadline_time">Time</string>
    <string name="change_deadline_date">Date</string>
    <string name="to_do_app">TODO App</string>
    <string name="set_task_priority">Set task priority</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Preference Titles -->
    <string name="ui">UI</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="settings">Settings</string>
    <string name="choose_theme_text">Choose Theme</string>
    <string name="note_deletion_message">Do you really want to delete this task?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

</resources>